--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,12 @@
             <version>1.2</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>2.7.8</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
