--- a/.gitignore
+++ b/.gitignore
@@ -26,16 +26,5 @@ hs_err_pid*
 .idea/
 out/
 target/
-*.iml
-
-!bat/
-!bat/**/
-!Configuratoin/
-!Configuratoin/**/
-!src/
-!src/**/
-!web/
-!web/**/
-!.gitignore
-!pom.xml
-!README.md
+**/*.iml
+**/*~
