--- a/ant/sub/build.xml
+++ b/ant/sub/build.xml
@@ -14,12 +14,32 @@
 
     <target name="for" depends="" >
         <echo message="entrancing sub for" />
-        <echo message="${basedir},traversal" />
+        <echo message="${basedir},traversal dir" />
+        <tstamp>
+            <format property="time" pattern="yyyy-MM-dd HH:mm:ss" />
+        </tstamp>
+        <echo message="${time}" />
+        <record name="${basedir}/ant-basedir.log" action="start" loglevel="verbose" />
+        <record name="./ant-currentdir.log" action="start" loglevel="verbose" />
+        <!-- 指定目录时文件夹必须存在，否则异常
+            C:\Users\JasonFitch\Desktop\Github\BEStest\ant\sub\build.xml:21: Problems opening file using a recorder entry 
+
+            疑问：这里ant.log为什么在ant目录下？
+            也就是说 . != ${basedir} ,却表示了basedir的父目录，
+            .           代表当前ant启动(main)的根目录
+            ${basedir}  代表当前ant工程(sub)的根目录
+
+            这里的project元素中的basedir属性判断方法是依据 useNativeBasedir 的值具体判断，其默认是false，
+            如果设置为true则始终使用project元素中的 basedir 属性的值，否则依照下列规则：
+            1.如果 <ant> 调用时提供了，就用 dir 属性提供的
+            2.参考：https://ant.apache.org/manual-1.9.x/index.html 中的 ant 任务
+
+        -->
         <for param="file" >
           <path>
-              <dirset dir="." includes="*" />
-              <!-- include="*"  代表当前目录下的所有文件夹 -->
-              <!-- include="**" 代表当前目录下包括递归的所有文件夹，包括自身 -->
+              <dirset dir="${basedir}" includes="*" />
+              <!-- include="*"  代表当前目录下的所有文件夹，不递归,不含自身 -->
+              <!-- include="**" 代表当前目录下的所有文件夹，  递归， 含自身-->
           </path>
           <sequential>
             <echo message="@{file}" />
@@ -32,8 +52,6 @@
         <echo message="exiting sub for" />
   </target>
 
-
-  
   <target name="missDepend" depends="">
       <echo message="entrancing sub missDepend"/>
   </target>
