batch start name issue

--- a/maven/executor/build.properties
+++ b/maven/executor/build.properties
@@ -4,7 +4,9 @@ jarDir=${basedir}/jar
 
 jarFilePath=${jarDir}/ProcessTest.jar
 #startFilePath=${basedir}/start.bat
-startFilePath=C:/apache-tomcat-8.5.32/bin/catalina.bat
+startFilePath=${basedir}/../../bat/startmain.bat
+#startFilePath=${basedir}/../../bat/callmain.bat
+#startFilePath=C:/apache-tomcat-8.5.32/bin/catalina.bat
 argument1=start
 
 mainClass=RuntimeTest.ProcessTest
