--- a/maven/executor/build.properties
+++ b/maven/executor/build.properties
@@ -3,8 +3,8 @@ buildDir=${basedir}/build
 jarDir=${basedir}/jar
 
 jarFilePath=${jarDir}/ProcessTest.jar
-#startFilePath=${basedir}/start.bat
-startFilePath=${basedir}/../../bat/startmain.bat
+startFilePath=${basedir}/start.bat
+#startFilePath=${basedir}/../../bat/startmain.bat
 #startFilePath=${basedir}/../../bat/callmain.bat
 #startFilePath=C:/apache-tomcat-8.5.32/bin/catalina.bat
 argument1=start
