--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
             <version>2.27</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.5.0</version>
+        </dependency>
     </dependencies>
 
 
