package struction modified

--- a/maven/executor/build.properties
+++ b/maven/executor/build.properties
@@ -1,4 +1,4 @@
-srcDir=${basedir}/../../src/main/java/RuntimeTest
+srcDir=${basedir}/../../src/main/java/SystemTest/Runtime
 buildDir=${basedir}/build
 jarDir=${basedir}/jar
 
@@ -9,7 +9,7 @@ startFilePath=${basedir}/start.bat
 #startFilePath=C:/apache-tomcat-8.5.32/bin/catalina.bat
 argument1=start
 
-mainClass=RuntimeTest.ProcessTest
+mainClass=SystemTest.Runtime.ProcessTest
 forkBoolean=true
 jvmXdebug=-Xdebug 
 jvmXrunjdwp=-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=28001
