--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,10 @@
     <groupId>com.jasonfitch.test</groupId>
     <artifactId>BEStest</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <modules>
+        <module>gmssl</module>
+    </modules>
+    <packaging>pom</packaging>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-core -->
