--- a/pom.xml
+++ b/pom.xml
@@ -145,11 +145,11 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.bouncycastle/bctls-jdk15on -->
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bctls-jdk15on</artifactId>
-            <version>1.60</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.bouncycastle</groupId>-->
+            <!--<artifactId>bctls-jdk15on</artifactId>-->
+            <!--<version>1.60</version>-->
+        <!--</dependency>-->
 
 
     </dependencies>
