--- a/gmssl/pom.xml
+++ b/gmssl/pom.xml
@@ -11,13 +11,13 @@
 
     <artifactId>gmssl</artifactId>
 
-    <!--<dependencies>-->
-        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.bouncycastle</groupId>-->
-            <!--<artifactId>bcprov-jdk15on</artifactId>-->
-            <!--<version>1.60</version>-->
-        <!--</dependency>-->
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.60</version>
+        </dependency>
 
         <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.bouncycastle/bctls-jdk15on &ndash;&gt;-->
         <!--<dependency>-->
@@ -25,7 +25,7 @@
             <!--<artifactId>bctls-jdk15on</artifactId>-->
             <!--<version>1.60</version>-->
         <!--</dependency>-->
-        <!---->
-    <!--</dependencies>-->
+
+    </dependencies>
 
 </project>
