--- a/gmssl/pom.xml
+++ b/gmssl/pom.xml
@@ -19,12 +19,12 @@
             <version>1.60</version>
         </dependency>
 
-        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.bouncycastle/bctls-jdk15on &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.bouncycastle</groupId>-->
-            <!--<artifactId>bctls-jdk15on</artifactId>-->
-            <!--<version>1.60</version>-->
-        <!--</dependency>-->
+        <!-- https://mvnrepository.com/artifact/org.bouncycastle/bctls-jdk15on -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bctls-jdk15on</artifactId>
+            <version>1.60</version>
+        </dependency>
 
     </dependencies>
 
