--- a/gmssl/pom.xml
+++ b/gmssl/pom.xml
@@ -6,7 +6,6 @@
 
     <groupId>com.jasonfitch.test</groupId>
     <artifactId>gmssl</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <parent>
@@ -21,6 +20,8 @@
             <groupId>org.bouncycastle</groupId>
             <artifactId>bctls-jdk15on</artifactId>
             <version>1.60</version>
+            <!-- 必须声明为某个 pom 的 module 元素时，才可以使用其 property -->
+            <!--<version>${bouncycastle.version}</version>-->
         </dependency>
 
     </dependencies>
