--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,44 @@
         <!--<module>gmssl</module>-->
     </modules>
 
+    <properties>
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+
+        <!--feature springmvc-->
+        <tomcat.dir.install>C:/apache-tomcat-8.5.37</tomcat.dir.install>
+        <tomcat.version>8.5.37</tomcat.version>
+        <slf4j.version>1.7.25</slf4j.version>
+
+        <!--feature-->
+        <geronimo-transaction.version>3.1.3</geronimo-transaction.version>
+        <xbean-reflect.version>3.18</xbean-reflect.version>
+        <beanutils.version>1.9.3</beanutils.version>
+        <dbcp2.version>2.5.0</dbcp2.version>
+        <mysql.jdbc.version>5.1.24</mysql.jdbc.version>
+        <derby.version>10.12.1.1</derby.version>
+        <jsch.version>0.1.50</jsch.version>
+        <jersey.version>2.27</jersey.version>
+        <jedis.version>2.9.0</jedis.version>
+        <log4j.version>2.11.1</log4j.version>
+        <disruptor.version>3.4.2</disruptor.version>
+        <asm.version>6.2.1</asm.version>
+        <metadata-extractor.version>2.9.0</metadata-extractor.version>
+
+        <!--springmvc-->
+        <spring.version>3.1.0.RELEASE</spring.version>
+        <spymemcached.version>2.12.3</spymemcached.version>
+        <msm.version>2.1.1</msm.version>
+        <jstl.version>1.2</jstl.version>
+        <servlet-api.version>3.1.0</servlet-api.version>
+
+        <!--gmssl placeholder-->
+        <bouncycastle.version>1.60</bouncycastle.version>
+
+    </properties>
+
     <dependencies>
 
     </dependencies>
@@ -24,6 +62,7 @@
         <plugins>
 
             <plugin>
+
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
