--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <modules>
         <module>feature</module>
         <module>springmvc</module>
-        <!--gmssl 工程需要特殊JDK编译-->
+        <!--gmssl 工程需要特殊JDK编译，这里暂且不编译-->
         <!--<module>gmssl</module>-->
     </modules>
 
@@ -61,8 +61,8 @@
     <build>
         <plugins>
 
+            <!-- 只要 某个pom 将 本pom 声明为自己的 parent 元素，那么 本pom 中的插件以及属性在 子pom 中都是有效的  -->
             <plugin>
-
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
@@ -81,7 +81,6 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
 
 
