--- a/springmvc/pom.xml
+++ b/springmvc/pom.xml
@@ -101,6 +101,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-websocket</artifactId>
+            <version>${tomcat.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 
