--- a/springmvc/web/WEB-INF/web.xml
+++ b/springmvc/web/WEB-INF/web.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-         version="2.4" id="WebApp_ID">
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1" id="WebApp_ID">
 
-    <display-name>msm-sample-webapp</display-name>
+    <!--//JF servlet ????????? servlet ??? xmlns ???
+        2.4 http://java.sun.com/xml/ns/j2ee
+        3.0 http://java.sun.com/xml/ns/javaee
+        3.1 http://xmlns.jcp.org/xml/ns/javaee
+    -->
+
+    <display-name>springmvc</display-name>
 
     <servlet>
         <servlet-name>request</servlet-name>
@@ -16,32 +22,28 @@
         <url-pattern>/request</url-pattern>
     </servlet-mapping>
 
-    <session-config>
-        <session-timeout>3</session-timeout>
-    </session-config>
-
-    <!--??servlet-->
+    <!-- spring DispatcherServlet servlet-->
     <servlet>
-        <!--?? -->
         <servlet-name>springmvc</servlet-name>
-        <!-- Servlet? -->
+        <!-- SpringMvc ??servlet???-->
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
-            <!--SpringMVC????????? -->
+            <!--SpringMVC???? -->
             <param-name>contextConfigLocation</param-name>
-            <!--??????resources????springmvc-servlet.xml -->
             <param-value>classpath*:spring-mvc.xml</param-value>
         </init-param>
-        <!-- ?????????????? -->
         <load-on-startup>1</load-on-startup>
     </servlet>
 
-    <!--???????springmvc?? -->
+    <!--springmvc ?????? -->
     <servlet-mapping>
         <servlet-name>springmvc</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
+    <session-config>
+        <session-timeout>3</session-timeout>
+    </session-config>
 
     <!--<resource-ref>-->
     <!--<description>DB Connection</description>-->
