--- a/feature/pom.xml
+++ b/feature/pom.xml
@@ -10,7 +10,7 @@
     <packaging>jar</packaging>
 
     <parent>
-        <artifactId>MiscellaneouTest</artifactId>
+        <artifactId>MiscellaneousTest</artifactId>
         <groupId>com.jasonfitch.Test</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
