--- a/gmssl/pom.xml
+++ b/gmssl/pom.xml
@@ -9,7 +9,7 @@
     <packaging>jar</packaging>
 
     <parent>
-        <artifactId>MiscellaneouTest</artifactId>
+        <artifactId>MiscellaneousTest</artifactId>
         <groupId>com.jasonfitch.Test</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
