--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.jasonfitch.Test</groupId>
-    <artifactId>MiscellaneouTest</artifactId>
+    <artifactId>MiscellaneousTest</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
