--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,8 @@
         <httpclient.version>4.2.1</httpclient.version>
 
         <!--springmvc-->
-        <spring.version>3.1.0.RELEASE</spring.version>
+        <spring.version>5.1.7.RELEASE</spring.version>
+        <!--<spring.version>3.1.0.RELEASE</spring.version>-->
         <spymemcached.version>2.12.3</spymemcached.version>
         <msm.version>2.1.1</msm.version>
         <jstl.version>1.2</jstl.version>
