--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
         <msm.version>2.1.1</msm.version>
         <jstl.version>1.2</jstl.version>
         <servlet-api.version>3.1.0</servlet-api.version>
+        <ojdbc.version>11.1.0.6.0</ojdbc.version>
 
         <!--gmssl placeholder-->
         <bouncycastle.version>1.60</bouncycastle.version>
