git pack size setting

--- a/configuration/git/.gitconfig
+++ b/configuration/git/.gitconfig
@@ -22,3 +22,10 @@
 	path = C:/Program Files/KDiff3/kdiff3.exe
 [difftool "kdiff3"]
 	path = C:/Program Files/KDiff3/kdiff3.exe
+[core] 
+    packedGitLimit = 512m 
+    packedGitWindowSize = 512m 
+[pack] 
+    deltaCacheSize = 2047m 
+    packSizeLimit = 2047m 
+    windowMemory = 2047m
