--- a/gmssl/pom.xml
+++ b/gmssl/pom.xml
@@ -10,7 +10,7 @@
 
     <parent>
         <artifactId>MiscellaneousTest</artifactId>
-        <groupId>com.jasonfitch.Test</groupId>
+        <groupId>com.jasonfitch.test</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
