--- a/feature/pom.xml
+++ b/feature/pom.xml
@@ -123,6 +123,12 @@
             <version>${tomcat.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>${bouncycastle.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
