json util gson and reflect field type determined pom file

--- a/feature/pom.xml
+++ b/feature/pom.xml
@@ -129,6 +129,13 @@
             <version>${bouncycastle.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
