--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
         <asm.version>6.1.1</asm.version>
         <metadata-extractor.version>2.9.0</metadata-extractor.version>
         <httpclient.version>4.2.1</httpclient.version>
+        <gson.version>2.8.5</gson.version>
 
         <!--springmvc-->
         <spring.version>5.1.7.RELEASE</spring.version>
