--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,18 @@
         <jsch.version>0.1.50</jsch.version>
         <jersey.version>2.27</jersey.version>
         <jedis.version>2.9.0</jedis.version>
+
         <log4j.version>2.11.1</log4j.version>
         <disruptor.version>3.4.2</disruptor.version>
+
         <asm.version>6.1.1</asm.version>
         <metadata-extractor.version>2.9.0</metadata-extractor.version>
         <httpclient.version>4.2.1</httpclient.version>
+
         <gson.version>2.8.5</gson.version>
+
+        <commons-el.version>1.0</commons-el.version>
+        <jstl-api.version>1.2</jstl-api.version>
 
         <!--springmvc-->
         <spring.version>5.1.7.RELEASE</spring.version>
