--- a/feature/pom.xml
+++ b/feature/pom.xml
@@ -15,6 +15,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <trilead-ssh2.version>1.0.0-build217</trilead-ssh2.version>
+    </properties>
+
     <dependencies>
 
         <dependency>
@@ -148,6 +152,13 @@
             <groupId>javax.servlet.jsp.jstl</groupId>
             <artifactId>jstl-api</artifactId>
             <version>${jstl-api.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.trilead/trilead-ssh2 -->
+        <dependency>
+            <groupId>com.trilead</groupId>
+            <artifactId>trilead-ssh2</artifactId>
+            <version>${trilead-ssh2.version}</version>
         </dependency>
 
 
