--- a/feature/pom.xml
+++ b/feature/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <trilead-ssh2.version>1.0.0-build217</trilead-ssh2.version>
+        <javassist.version>3.27.0-GA</javassist.version>
     </properties>
 
     <dependencies>
@@ -159,6 +160,13 @@
             <groupId>com.trilead</groupId>
             <artifactId>trilead-ssh2</artifactId>
             <version>${trilead-ssh2.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>${javassist.version}</version>
         </dependency>
 
 
