--- a/feature/pom.xml
+++ b/feature/pom.xml
@@ -17,7 +17,12 @@
 
     <properties>
         <trilead-ssh2.version>1.0.0-build217</trilead-ssh2.version>
-        <javassist.version>3.27.0-GA</javassist.version>
+        <!--jdk8-->
+        <!--<javassist.version>3.27.0-GA</javassist.version>-->
+        <!--jdk7-->
+        <javassist.version>3.25.0-GA</javassist.version>
+        <!--jdk6-->
+        <!--<javassist.version>3.23.2-GA</javassist.version>-->
     </properties>
 
     <dependencies>
